import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumOptions {
  optional bool my_enum_option = 50003;
}

extend google.protobuf.EnumValueOptions {
  optional uint32 my_enum_value_option = 50004;
}

enum Flag {

  option (my_enum_option) = true;

  ACK = 0 [(my_enum_value_option) = 321];
  NAK = 1;
}

message Flagger {

  required Flag flag = 1;
  
  enum Hair {
    POINTY = 0;
    FLAT = 1;
  }
  
  optional Hair hair = 2 [default = POINTY];
  
}