message Hood { 

   option message_set_wire_format = true;
   
}