import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    optional string my_option = 51234;
}

message MyMessage {
    option (my_option) = "Hello world!";
}

message MySecondMessage {

  extend google.protobuf.MessageOptions {
     optional string my_second_option = 51235;
  }
}